# stars-to-kbs

./: .gitignore  LICENSE  NOTICE  README.en.md  README.md  README.zh-CN.md  config.example.toml  pyproject.toml
src/stars_to_kbs/: __init__.py  agent_runner.py  cli.py  config.py  github_api.py  markdown.py  models.py  validation.py
src/stars_to_kbs/templates/: config.example.toml
tests/: test_agent_runner.py  test_cli.py  test_config.py  test_github_api.py  test_markdown.py  test_validation.py
