[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "stars-to-kbs"
version = "0.1.0"
description = "Organize GitHub starred repositories into a personal KBS note using local AI CLIs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ghosTM55" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6", "build>=1.2"]

[project.scripts]
stars-to-kbs = "stars_to_kbs.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/stars_to_kbs"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
